<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.auties00</groupId>
    <artifactId>optional</artifactId>
    <version>1.1-SNAPSHOT</version>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>Optional at no cost</description>
    <url>https://github.com/Auties00/optional</url>
    <developers>
        <developer>
            <name>Alessandro Autiero</name>
            <email>alautiero@gmail.com</email>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>https://github.com/Auties00/optional/tree/master</url>
        <connection>scm:git:https://github.com/Auties00/optional.git</connection>
    </scm>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${gpg.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <packaging>jar</packaging>

    <properties>
        <java.version>11</java.version>
        <lombok.version>1.18.22</lombok.version>
        <javac.tester.version>0.19</javac.tester.version>
        <compiler.plugin.version>3.8.1</compiler.plugin.version>
        <javadoc.plugin.version>3.2.0</javadoc.plugin.version>
        <deploy.plugin.version>2.8.2</deploy.plugin.version>
        <staging.plugin.version>1.6.7</staging.plugin.version>
        <gpg.plugin.version>3.0.1</gpg.plugin.version>
        <optional.module>it.auties.optional</optional.module>
        <open.tree.module.to.optional>jdk.compiler/com.sun.tools.javac.tree=${optional.module}</open.tree.module.to.optional>
        <open.util.module.to.optional>jdk.compiler/com.sun.tools.javac.util=${optional.module}</open.util.module.to.optional>
        <open.code.module.to.optional>jdk.compiler/com.sun.tools.javac.code=${optional.module}</open.code.module.to.optional>
        <open.api.module.to.optional>jdk.compiler/com.sun.tools.javac.api=${optional.module}</open.api.module.to.optional>
        <open.comp.module.to.optional>jdk.compiler/com.sun.tools.javac.comp=${optional.module}</open.comp.module.to.optional>
        <open.jvm.module.to.optional>jdk.compiler/com.sun.tools.javac.jvm=${optional.module}</open.jvm.module.to.optional>
        <open.model.module.to.optional>jdk.compiler/com.sun.tools.javac.model=${optional.module}</open.model.module.to.optional>
        <open.processing.module.to.optional>jdk.compiler/com.sun.tools.javac.processing=${optional.module}</open.processing.module.to.optional>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin.version}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.tree.module.to.optional}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.util.module.to.optional}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.code.module.to.optional}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.api.module.to.optional}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.comp.module.to.optional}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.jvm.module.to.optional}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.processing.module.to.optional}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.model.module.to.optional}</arg>
                    </compilerArgs>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${javadoc.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <additionalOptions>
                        <additionalOption>--enable-preview</additionalOption>
                        <additionalOption>--add-exports ${open.tree.module.to.optional}</additionalOption>
                        <additionalOption>--add-exports ${open.util.module.to.optional}</additionalOption>
                        <additionalOption>--add-exports ${open.code.module.to.optional}</additionalOption>
                        <additionalOption>--add-exports ${open.api.module.to.optional}</additionalOption>
                        <additionalOption>--add-exports ${open.comp.module.to.optional}</additionalOption>
                        <additionalOption>--add-exports ${open.jvm.module.to.optional}</additionalOption>
                        <additionalOption>--add-exports ${open.processing.module.to.optional}</additionalOption>
                        <additionalOption>--add-exports ${open.model.module.to.optional}</additionalOption>
                    </additionalOptions>
                    <source>17</source>
                    <failOnError>true</failOnError>
                    <debug>true</debug>
                    <verbose>true</verbose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${deploy.plugin.version}</version>
                <executions>
                    <execution>
                        <id>default-deploy</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>deploy</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>${staging.plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>